# quill-core-rs

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: doc.yml
core_formats/: Cargo.toml
core_formats/src/: format_const.rs  mod.rs  paragraph.rs  t_attributes.rs  t_formats.rs  text_formatter.rs
core_formats/src/util/: block.rs  block_format.rs  lookup.rs  mod.rs  node_morph.rs  string_util.rs
core_formats/tests/: paragraph.rs  text_formatter.rs  util_block.rs  util_node_morph.rs
dev-docs/: cursor.md  document_nodes.md  format_example.md  format_trait.md  introduction.md  operational_transform.md
dom/: Cargo.toml
dom/src/: constants.rs  dom_element.rs  dom_text.rs  mod.rs
dom/tests/: dom_element.rs
formats/alert/: README.MD
formats/code/: Cargo.toml
formats/code/src/: mod.rs
formats/code/tests/: code.rs
formats/header/: Cargo.toml
formats/header/src/: mod.rs
formats/header/tests/: header.rs
formats/image/: Cargo.toml
formats/image/src/: mod.rs
formats/image/tests/: image.rs
formats/link/: Cargo.toml
formats/link/src/: mod.rs
formats/link/tests/: link.rs
formats/list/: Cargo.toml
formats/list/src/: list_const.rs  mod.rs
formats/list/tests/: list.rs
formats/soft_break/: Cargo.toml
formats/soft_break/src/: mod.rs
formats/table/: README.MD
node_tree/: Cargo.toml
node_tree/src/: cursor.rs  doc_node.rs  dom_cursor.rs  dom_doc_node.rs  dom_doc_tree_morph.rs  error.rs  format_trait.rs  mod.rs  tree_traverse.rs
node_tree/tests/: cursor.rs  doc_node.rs  dom_doc_tree_morph.rs  tree_traverse.rs
op_transform/: Cargo.toml
op_transform/src/: auto_soft_break.rs  doc_root.rs  error.rs  mod.rs  op_delete.rs  op_insert.rs  op_retain.rs  registry.rs
op_transform/tests/: cursor.rs  doc_root.rs  edge_cases.rs  mod.rs  op_delete.rs  op_insert.rs  op_retain.rs  op_retain_attr.rs  op_transform_test_utils.rs  registry.rs
