[package]
name = "core_formats"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/mod.rs"

[dependencies]
anyhow = "1.0.*"
delta =  {git = "https://github.com/mundo-68/quill-delta-rs.git" }
dom = { path = "../dom" }
log = "0.4.*"
node_tree = { path = "../node_tree" }
once_cell = "1.19.*"

[dependencies.web-sys]
version = "0.3.*"
features = [
  "Element",
]

[dev-dependencies]
serde_json = "1.0.*"
wasm-bindgen-test = "0.3.*"
# enables the `test_export` feature
op_transform = { path = "../op_transform", features = ["test_export"] }
