[package]
name = "op_transform"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/mod.rs"

[dependencies]
anyhow = "1.0.79"
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.*", optional = true }
console_log = { version = "0.2", optional = true }
delta =  {git = "https://github.com/mundo-68/quill-delta-rs.git" }
dom = { path = "../dom" }
core_formats = { path = "../core_formats" }
log = "0.4"
node_tree = { path = "../node_tree" }
thiserror = "1.0.56"
web-sys = "0.3.68"
once_cell = "1.19.0"

[features]
default = ["console_error_panic_hook", "console_log"] # , "wasm-bindgen/enable-interning"]
test_export = []

[dev-dependencies]
dom = { path = "../dom" }
node_tree = { path = "../node_tree", features = ["test_export"] }
# enables the `test_export` feature
op_transform = { path = "../op_transform", features = ["test_export"] }
wasm-bindgen-test = "0.3"
